# hypr-control-center

./: .gitignore  PKGBUILD  README.md  meson.build  meson_options.txt
global-shortcuts-provider/: control-center-global-shortcuts-provider.c  meson.build  org.gnome.GlobalShortcutsProvider.xml  org.hypr.Settings.GlobalShortcutsProvider.service.in
hypr-control-center-0.1.0/: FETCH_HEAD  config  packed-refs  shallow
hypr-control-center-0.1.0/objects/pack/: pack-50168924efd9a6bbd812e92dfac32435d365deaf.idx  pack-50168924efd9a6bbd812e92dfac32435d365deaf.rev  pack-ffbe4ac30fc5b1f87890a6eac1a284d25bd04eb7.idx  pack-ffbe4ac30fc5b1f87890a6eac1a284d25bd04eb7.rev
hypr-control-center-0.1.0/refs/heads/: main
libhypr/: hypr-backend.c  hypr-backend.h  meson.build
man/: gnome-control-center.xml
panels/: meson.build
panels/applications/: applications.gresource.xml  cc-applications-panel.blp  cc-applications-panel.c  hypr-applications-panel.desktop.in  meson.build
panels/background/: background.gresource.xml  bg-apply.c  bg-apply.h  bg-source.h  cc-background-chooser.c  cc-background-item.c  cc-background-item.h  cc-background-paintable.c  cc-background-paintable.h  cc-background-panel.c  cc-background-preview.c  cc-background-xml.c  hypr-background-panel.desktop.in  meson.build
panels/bluetooth/: bluetooth-panel-scenario-tester.py  bluetooth.gresource.xml  cc-bluetooth-panel.blp  cc-bluetooth-panel.c  cc-bt-device-widget.c  cc-bt-device-widget.h  hypr-bluetooth-panel.desktop.in  meson.build
panels/color/: cc-color-calibrate.c  color.gresource.xml  hypr-color-panel.desktop.in  meson.build
panels/common/: common.gresource.xml  gsd-common-enums.c  gsd-common-enums.h  hypr-control-center.rules.in  meson.build  stub-languages.c  stub-languages.h  stub-wall-clock.c  stub-wall-clock.h  stub-xkb-info.c  stub-xkb-info.h
panels/display/: cc-hyprsunset.c  cc-hyprsunset.h  cc-night-light-page.c  display.gresource.xml  hypr-display-panel.desktop.in  meson.build
panels/keyboard/: cc-input-chooser.c  cc-input-chooser.h  cc-input-list-box.c  cc-input-source-xkb.h  cc-input-source.c  cc-keyboard-manager.c  hypr-keyboard-panel.desktop.in  meson.build  stub-languages.c  stub-languages.h
panels/mouse/: cc-mouse-panel.c  cc-mouse-test.c  hypr-input-helper.c  hypr-input-helper.h  hypr-mouse-panel.desktop.in  meson.build  mouse.gresource.xml
panels/multitasking/: hypr-multitasking-panel.desktop.in  meson.build  multitasking.gresource.xml
panels/network/: cc-wifi-connection-list.c  cc-wifi-connection-row.blp  cc-wifi-connection-row.c  cc-wifi-panel.blp  cc-wifi-panel.c  hypr-network-panel.desktop.in  hypr-wifi-panel.desktop.in  meson.build  net-device-wifi.c  network.gresource.xml
panels/network/connection-editor/: connection-editor.gresource.xml
panels/notifications/: cc-app-notifications-page.c  cc-notifications-panel.c  hypr-notifications-panel.desktop.in  meson.build  notifications.gresource.xml
panels/online-accounts/: hypr-online-accounts-panel.desktop.in  meson.build
panels/power/: cc-hypridle.c  cc-hypridle.h  cc-power-panel.c  gsd-enums.h  hypr-power-panel.desktop.in  meson.build  power-panel-scenario-tester.py  power.gresource.xml
panels/printers/: hypr-printers-panel.desktop.in  meson.build  printers.gresource.xml
panels/privacy/: hypr-privacy-panel.desktop.in  meson.build  privacy.gresource.xml
panels/search/: hypr-search-panel.desktop.in  meson.build  search.gresource.xml
panels/sharing/: cc-sharing-networks.c  cc-sharing-panel.c  hypr-sharing-panel.desktop.in  meson.build  sharing.gresource.xml
panels/sound/: cc-pa-helpers.c  cc-pa-helpers.h  cc-sound-panel.blp  cc-sound-panel.c  cc-sound-panel.h  hypr-sound-panel.desktop.in  meson.build  sound.gresource.xml
panels/system/: cc-password-utils.c  cc-system-panel.c  hypr-system-panel.desktop.in  meson.build  system.gresource.xml
panels/system/about/: cc-about-page.c  hypr-about-panel.desktop.in  meson.build
panels/system/datetime/: cc-datetime-page.blp  cc-datetime-page.c  cc-tz-dialog.blp  cc-tz-item.c  hypr-datetime-panel.desktop.in  meson.build  org.hypr.controlcenter.system.policy.in  tz.c
panels/system/region/: cc-format-chooser.c  cc-format-preview.c  cc-region-page.c  hypr-region-panel.desktop.in  meson.build
panels/system/remote-desktop/: cc-desktop-sharing-page.c  cc-encryption-fingerprint-dialog.c  cc-remote-desktop-page.c  cc-remote-login-page.c  meson.build  org.hypr.controlcenter.remote-session-helper.policy.in.in
panels/system/secure-shell/: cc-secure-shell-page.c  cc-secure-shell.c  meson.build  org.hypr.controlcenter.remote-login-helper.policy.in.in
panels/system/users/: cc-add-user-dialog.c  cc-avatar-chooser.c  cc-enterprise-login-dialog.c  cc-entry-feedback.c  cc-fingerprint-dialog.c  cc-password-dialog.c  cc-user-page.c  meson.build  (+4 more)
panels/universal-access/: hypr-universal-access-panel.desktop.in  meson.build  universal-access.gresource.xml
panels/wacom/: cc-tablet-tool-map.c  hypr-wacom-panel.desktop.in  meson.build  wacom-panel-scenario-tester.py
panels/wellbeing/: hypr-wellbeing-panel.desktop.in  meson.build  wellbeing.gresource.xml
panels/wwan/: cc-wwan-apn-dialog.c  cc-wwan-details-dialog.c  cc-wwan-device-page.c  cc-wwan-mode-dialog.c  cc-wwan-network-dialog.c  cc-wwan-panel.c  cc-wwan-sim-lock-dialog.c  hypr-wwan-panel.desktop.in  meson.build  wwan.gresource.xml
pkg/hypr-control-center/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
search-provider/: cc-search-provider.c  control-center-search-provider.c  meson.build  org.hypr.Settings.SearchProvider.service.in  org.hypr.Settings.search-provider.ini
shell/: cc-application.c  cc-config.c  cc-config.h  cc-panel-list.c  cc-panel-loader.c  cc-panel.c  cc-window.c  hypr-control-center.gresource.xml.in  meson.build  org.hypr.Settings.desktop.in
shell/appdata/: meson.build  org.hypr.Settings.metainfo.xml.in.in
shell/completions/: hypr-control-center.in  meson.build
tests/: meson.build
tests/interactive-panels/: main.c
tests/interactive-panels/applications/: gtp-dynamic-panel.desktop.in  gtp-static-init.desktop.in
(+48 files in other folders)
